@@ -3,6 +3,10 @@
 	* generic/tclTest.c (SimpleMatchInDirectory): Corrected a refcount
 	imbalance that affected the filesystem-[147]* tests in the test
 	suite.  Thanks to Don Porter for the patch. [Bug 1710707]
+	* generic/tclPathObj.c (Tcl_FSJoinPath, Tcl_FSGetNormalizedPath):
+	Corrected several memory leaks that caused refcount imbalances
+	resulting in memory leaks on Windows.  Thanks to Joe Mistachkin
+	for the patch.
 	
 2007-05-01  Miguel Sofer  <msofer@users.sf.net>
 
